--- a/blogicum/templates/includes/post_card.html
+++ b/blogicum/templates/includes/post_card.html
@@ -2,10 +2,12 @@
   <div class="card" style="width: 40rem;">
     <div class="card-body">
       {% if post.image %}
+      <form method="post" enctype="multipart/form-data">
         <a href="{{ post.image.url }}" target="_blank">
           <img class="border-3 rounded img-fluid img-thumbnail mb-2 mx-auto d-block" src="{{ post.image.url }}">
         </a>
-      {% endif %}
+      </form>
+        {% endif %}
       <h5 class="card-title">{{ post.title }}</h5>
       <h6 class="card-subtitle mb-2 text-muted">
         <small>
